myteo/test/analyze/type_check/binary_operation/bitwise.exp
Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/bitwise.myte:11:7-11
 11 |   (1 & true: Int);
    |        ^^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/bitwise.myte:12:3-7
 12 |   (true & "a": String);
    |    ^^^^

Error: Expected type `Int` but found `String`
test/analyze/type_check/binary_operation/bitwise.myte:12:10-13
 12 |   (true & "a": String);
    |           ^^^

Error: Expected type `Int` but found `Byte`
test/analyze/type_check/binary_operation/bitwise.myte:18:7
 18 |   (i & b: Int);
    |        ^

Error: Expected type `Byte` but found `Int`
test/analyze/type_check/binary_operation/bitwise.myte:19:7
 19 |   (b & i: Byte);
    |        ^

Error: Expected type `Int` but found `Byte`
test/analyze/type_check/binary_operation/bitwise.myte:22:3-8
 22 |   (1 & b: Int);
    |    ^^^^^

Error: Expected type `Int` but found `Byte`
test/analyze/type_check/binary_operation/bitwise.myte:23:3-8
 23 |   (b & 1: Int);
    |    ^^^^^